# mycamerai

./: .travis.yml  Dockerfile  Dockerfile.dev  Dockerfile.ide  Makefile  README.md  android.txt  buildozer.spec  pyproject.toml
.github/: dependabot.yml
mycamerai/: camera_widget.py  face_detector.py  main.py  mycamerai.kv  photo.ini  screen_manager.py  screens.py
mycamerai/ia/: face_detector.py  people_detector.py
mycamerai/screens/: capture.kv  capture.py  editor.kv  editor.py  screen_manager.py
mycamerai/widgets/: camera_widget.py
photo/: camera_widget.py  face_detector.py  main.py  photo.kv  screen_manager.py  screens.py
tests/: test_face_detector.py
