[tool.poetry]
name = "mycamerai"
version = "0.1.0"
description = "Camera app with AI inside"
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"

[tool.coverage.run]
branch = true
source = "mycamerai"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[isort]
line_length=200