[tool.poetry]
name = "mycamerai"
version = "0.1.0"
description = "Camera app with AI inside"
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
android-tool = "^1.1.2"
kivy = "^1.11.1"
kivymd = "^0.104.1"
xcamera = "^2020.613"
pyjnius = "^1.3.0"
plyer = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.0"
coverage = {extras = ["toml"], version = "^5.0.3"}
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^5.6.4"

[tool.coverage.run]
branch = true
source = "mycamerai"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[isort]
line_length=200